# flight-schedule

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BTS_SCHEMA_ANALYSIS.md  Dockerfile  LOAD_TESTING_GUIDE.md  QUICK_START.md  README.md  REAL_DATA_SETUP.md  ROUTING_QUERY_REFERENCE.md  check_data.py  download_bts_flight_data.py  download_schedule_data.py  environment.yml  fix_datetime_queries.py  flight_search_demo.py  generate_flight_scenarios.py  generate_flight_scenarios_fast.py  load_bts_data.py  load_with_parallel_spark.py  neo4j_flight_load_test.py  pyproject.toml  pytest.ini  quick_load_test_analysis.py  realistic_flight_search_load_test.py  requirements-dev.txt  requirements.txt  setup-and-run.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: .gitkeep
src/queries/: create_constraints.cypher  create_indexes.cypher
tests/: __init__.py  test_business_rules.py  test_ci_unit.py  test_connection_logic.py  test_data_quality_checks.py  test_data_transformations.py  test_download_bts_unit.py  test_environment_scenarios.py  test_error_scenarios.py  test_flight_search.py  test_flight_search_unit.py  test_graph_validation.py  test_integration_heavy.py  test_load_bts_unit.py  test_load_testing_framework.py  test_performance.py  test_performance_baseline.py  test_performance_boundaries.py  test_pipeline_integration.py  test_system_validation_unit.py
