[project]
name = "neo4j-flight-schedule"
version = "1.0.0"
description = "Neo4j Flight Schedule Optimization System"
authors = [
    {name = "Flight Schedule Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.0.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.19.0",
    "numpy>=1.21.0",
    "pyarrow>=10.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.0,<4.0",
]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "flake8-docstrings>=1.6.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | private_data
  | data
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
skip_glob = ["private_data/*", "data/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "private_data",
    "data",
    ".venv",
    "venv",
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
    "test_*.py:D",       # no docstring requirements for tests
    "verify_*.py:D",     # no docstring requirements for verification scripts
]