[project]
name = "neo4j-flight-schedule"
version = "1.0.0"
description = "Neo4j Flight Schedule Optimization System"
authors = [
    {name = "Flight Schedule Team"}
]
readme = "README.md"
requires-python = ">=3.12.8"
# Dependencies managed by conda environment.yml for complete reproducibility

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | private_data
  | data
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
skip_glob = ["private_data/*", "data/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "private_data",
    "data",
    ".venv",
    "venv",
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
    "test_*.py:D",       # no docstring requirements for tests
    "verify_*.py:D",     # no docstring requirements for verification scripts
]
